RESOLVED FIXED193860
REGRESSION (r238818): Snapshot is removed too late after swiping back on Twitter
https://bugs.webkit.org/show_bug.cgi?id=193860
Summary REGRESSION (r238818): Snapshot is removed too late after swiping back on Twitter
Tim Horton
Reported 2019-01-25 18:18:34 PST
REGRESSION (r238818): Snapshot is removed too late after swiping back on Twitter
Attachments
Patch (4.47 KB, patch)
2019-01-25 18:18 PST, Tim Horton
no flags
Tim Horton
Comment 1 2019-01-25 18:18:48 PST
Tim Horton
Comment 2 2019-01-25 18:18:50 PST
WebKit Commit Bot
Comment 3 2019-01-25 23:29:21 PST
Comment on attachment 360202 [details] Patch Clearing flags on attachment: 360202 Committed r240542: <https://trac.webkit.org/changeset/240542>
WebKit Commit Bot
Comment 4 2019-01-25 23:29:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.